--- a/StrategyPatternExample/StrategyPatternExample.csproj
+++ b/StrategyPatternExample/StrategyPatternExample.csproj
@@ -43,11 +43,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Duck.cs" />
+    <Compile Include="FlyNoWay.cs" />
+    <Compile Include="FlyWithWings.cs" />
+    <Compile Include="IFlyBehavior.cs" />
+    <Compile Include="IQuackBehavior.cs" />
+    <Compile Include="MallardDuck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quack.cs" />
+    <Compile Include="RedheadDuck.cs" />
+    <Compile Include="RubberDuck.cs" />
+    <Compile Include="Squeek.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="StrategyPattern.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
